--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,24 +23,35 @@ layout: default
   {{ content }}
   
   <div class="post-profile">
-    <div class="post-profile-left">
-      <h5>{{ site.author.name }}</h5>
+    {% if site.author.thumbnail %}
+    <div class="post-profile-thumb">
+      <img src="{{ site.url }}/assets/images/{{ site.author.thumbnail }}" alt="{{ site.author.name }}">
+    </div>
+    {% endif %}
+
+    <div class="post-profile-desc">
+      <p><strong>{{ site.author.name }}</strong></p>
+
       <p>
         {{ site.description }}
+        <br>
+        {% if site.github_username %}{% include icon-github.html username=site.github_username %}{% endif %}
+        {% if site.facebook_username %}{% include icon-facebook.html username=site.facebook_username %}{% endif %}
+        {% if site.twitter_username %}{% include icon-twitter.html username=site.twitter_username %}{% endif %}
+        {% include icon-email.html useremail=site.author.email %}
+        {% include icon-rss.html %}
       </p>
     </div>
-
-    <div class="post-profile-right">
-      <h5>Share this post</h5>
-      <iframe src="//www.facebook.com/plugins/like.php?href={{ page.url | prepend: site.url }}&amp;send=false&amp;layout=button_count&amp;width=61&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=21" scrolling="no" frameborder="0" allowtransparency="true" height="20" width="61"></iframe>
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ page.url | prepend: site.url }}" data-count="horizontal"></a>
-      <div style="display: inline;"><div class="g-plus" data-action="share" data-href="{{ page.url | prepend: site.url }}"></div></div>
-    </div>
   </div>
-
 </div>
 
-<div class="fb-comments" data-href="{{ page.url | prepend: site.url }}" data-width="798" data-numposts="5"></div>
+<div>
+  <iframe src="//www.facebook.com/plugins/like.php?href={{ page.url | prepend: site.url }}&amp;send=false&amp;layout=button_count&amp;width=61&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=21" scrolling="no" frameborder="0" allowtransparency="true" height="20" width="61"></iframe>
+  <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{ page.url | prepend: site.url }}" data-count="horizontal"></a>
+  <div style="display: inline;"><div class="g-plus" data-action="share" data-href="{{ page.url | prepend: site.url }}"></div></div>
+</div>
+
+<div class="fb-comments" data-href="{{ page.url | prepend: site.url }}" data-width="800" data-numposts="5"></div>
 
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
