--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
-    
-    {% include header.html %}
+<body>
 
-    <main>
-      {{ content }}
-    </main>
+    {% include nav.html %}
+
+    {{ content }}
 
     {% include footer.html %}
 
     {% include logger.html %}
-    
-    {% if jekyll.environment == "development" %}
-    <div id="root"></div>
-    <script type="text/javascript" src="/assets/javascripts/bundle.js" charset="utf-8"></script>
-    {% endif %}
-    
-    <script>
-      $(function () {
-        $('.emoji').attr('align', 'absmiddle');
-      });
-    </script>
 
-  </body>
+</body>
+
 </html>
