Add 1718 Snowboard Post

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -230,7 +230,7 @@ hr.small {
     vertical-align: middle; }
     .post-profile .icon > svg path,
     .post-profile .icon img path {
-      fill: #404040; }
+      fill: #eee; }
 
 .section-heading {
   font-size: 36px;
