패키지 업데이트

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -5,6 +5,7 @@
     'rss': '{{ "/feed.xml" | prepend: site.baseurl }}',
     'twitter': '{{ site.twitter_username }}',
     'facebook': '{{ site.facebook_username }}',
+    'instagram': '{{ site.instagram_username }}',
     'github': '{{ site.github_username }}',
     'email': '{{ site.email_username }}'
 }}"></div>
